# PIGS

./: .gitignore  LICENSE  README.md  pyproject.toml
flip_7/: QUICKSTART.md  README.md  RULES_SUMMARY.md  environment.yml  example_game.py  launch_gui.sh  setup_env.sh
flip_7/core/: deck.py  engine.py  rules.py
flip_7/data/: events.py  models.py  persistence.py  statistics.py
flip_7/gui/: app.py
flip_7/gui/components/: __init__.py  card_picker.py  game_browser.py  game_play.py  game_setup.py  stats_view.py
flip_7/notebooks/: simulation_analysis.ipynb
flip_7/notebooks/simulation_results/: simulation_20251106_210848.csv  simulation_20251106_210849.txt  simulation_20251106_211200.txt  simulation_20251106_211513.txt
flip_7/simulation/: __init__.py  exporter.py  runner.py  strategy.py
flip_7/simulation/strategies/: __init__.py  random.py  threshold.py
flip_7/tests/: test_deck.py  test_engine.py  test_rules.py  test_simulation.py
