[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flip7"
version = "0.1.0"
description = "Flip 7 card game tracking and simulation platform with rich statistics."
requires-python = ">=3.10"
authors = [
  { name = "Flip 7 Team" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0"
]
simulation = [
  "jupyter>=1.0.0",
  "pandas>=2.0.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "scipy>=1.10.0",
  "tqdm>=4.65.0"
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["flip_7*", "game_tracker*"]
